X11 backend: don't set TouchpadOff to 1

When TouchpadOff is set to 1, ktouchpadenabler can't turn on the
touchpad.

BUG: 331285